Add a user followers endpoint and docs
