# handlers/follow.go
@@ -2,7 +2,6 @@ package handlers
 
 import (
 	"encoding/json"
-	"fmt"
 	"net/http"
 	"os"
 	"strings"
@@ -12,8 +11,70 @@ import (
 	"github.com/EduardoZepeda/go-coffee-api/types"
 	"github.com/EduardoZepeda/go-coffee-api/web"
 	"github.com/golang-jwt/jwt/v4"
+	"github.com/gorilla/mux"
 )
 
+// Return the list of following users godoc
+// @Summary      Return following users,
+// @Description  Return following users from a given user Id
+// @Tags         user
+// @Accept       json
+// @Produce      json
+// @Param id path string true "User id"
+// @Success      200  {array}  models.GetUserResponse
+// @Failure      500  {object}  types.ApiError
+// @Router       /following/{id} [get]
+func GetUserFollowingAccounts(w http.ResponseWriter, r *http.Request) {
+	params := mux.Vars(r)
+	users, err := repository.GetUserFollowing(r.Context(), params["id"])
+	if err != nil {
+		web.Respond(w, types.ApiError{Message: err.Error()}, http.StatusInternalServerError)
+		return
+	}
+	if len(users) == 0 {
+		web.Respond(w, struct{}{}, http.StatusOK)
+		return
+	}
+	web.Respond(w, users, http.StatusOK)
+	return
+}
+
+// Return the list of user's followers  godoc
+// @Summary      Return user's followers,
+// @Description  Return user's followers from a given user Id
+// @Tags         user
+// @Accept       json
+// @Produce      json
+// @Param id path string true "User id"
+// @Success      200  {array}  models.GetUserResponse
+// @Failure      500  {object}  types.ApiError
+// @Router       /followers/{id} [get]
+func GetUserFollowers(w http.ResponseWriter, r *http.Request) {
+	params := mux.Vars(r)
+	users, err := repository.GetUserFollowers(r.Context(), params["id"])
+	if err != nil {
+		web.Respond(w, types.ApiError{Message: err.Error()}, http.StatusInternalServerError)
+		return
+	}
+	if len(users) == 0 {
+		web.Respond(w, struct{}{}, http.StatusOK)
+		return
+	}
+	web.Respond(w, users, http.StatusOK)
+	return
+}
+
+// Follow a user account godoc
+// @Summary      Follow user,
+// @Description  Follow a user account using its id
+// @Tags         user
+// @Accept       json
+// @Produce      json
+// @Param request body models.FollowUnfollowRequest true "Follow a user account"
+// @Success      201  {object}  models.FollowUnfollowRequest
+// @Failure      400  {object}  types.ApiError
+// @Failure      500  {object}  types.ApiError
+// @Router       /following [post]
 func FollowUser(w http.ResponseWriter, r *http.Request) {
 	var followRequest = models.FollowUnfollowRequest{}
 	decoder := json.NewDecoder(r.Body)
@@ -36,7 +97,6 @@ func FollowUser(w http.ResponseWriter, r *http.Request) {
 	followRequest.UserFromId = claims["userId"].(string)
 	err = repository.FollowUser(r.Context(), &followRequest)
 	if err != nil {
-		fmt.Println(err)
 		web.Respond(w, types.ApiError{Message: err.Error()}, http.StatusInternalServerError)
 		return
 	}
@@ -44,6 +104,17 @@ func FollowUser(w http.ResponseWriter, r *http.Request) {
 	return
 }
 
+// Unfollow a user account godoc
+// @Summary      Unfollow user,
+// @Description  Unfollow a user account using its id
+// @Tags         user
+// @Accept       json
+// @Produce      json
+// @Param request body models.FollowUnfollowRequest true "Unfollow a user account"
+// @Success      204  {object}  models.FollowUnfollowRequest
+// @Failure      400  {object}  types.ApiError
+// @Failure      500  {object}  types.ApiError
+// @Router       /following [delete]
 func UnfollowUser(w http.ResponseWriter, r *http.Request) {
 	var unfollowRequest = models.FollowUnfollowRequest{}
 	decoder := json.NewDecoder(r.Body)
